Edit the results section.
I will re read this properly once we've spoken together.

--- a/main.tex
+++ b/main.tex
@@ -588,10 +588,12 @@ Theorems~\ref{} can also be used to identify if a strategy is a best response.
 % TODO Add an example where we check if `extort-2` is a best response to the
 % tournament of S&P.
 
-Lemma~\ref{lemma:memone_group_best_response} and Theorem~\ref{theorem:tournament_utility}
+Lemma~\ref{lemma:memone_group_best_response} and
+Theorem~\ref{theorem:tournament_utility}
 will now be used to give a list of particular best response results.
 
 \subsection{Reactive Strategies}\label{section:reactive_analytical}
+% TODO Reword all results using the same approach as above.
 
 The first constrained case considered here is that of the reactive strategies.
 Reactive strategies are a set of memory one strategies where they only take into
@@ -800,16 +802,16 @@ It is evident that the optimal behaviour has been captured by our search algorit
 \end{figure}
 
 Furthermore, for the case of the purely random players two more theoretical results
-are discussed. These are the cases where the opponent has manage to make a random
-player indifferent and the case where a purely random player is better of playing
+are discussed. These are the cases where the opponent has managed to make a random
+player indifferent and the case where a purely random player is better than playing
 a pure strategy.
 
 There is importance in both results. Initially, being indifferent refers to our
 actions no having any effects on the match. Thus there is not optimal behaviour
-for player \(p\).
+for player \(p\). % TODO I am not sure what this is trying to say.
 
 Secondly, by a pure strategy we are referring to the \(p=0\) and \(p=1\).
-In this case it is know that \(p^*\) is \(\in {0, 1}\) without testing the roots
+In this case it is known that \(p^*\) is \(\in {0, 1}\) without testing the roots
 of the derivative. The optimisation problem crumbles to a binary problem.
 
 The results are given equivalently by Lemmas~\ref{lemma:constant} and~\ref{lemma:linear}
