Add comment about moving results to appendix.

--- a/main.tex
+++ b/main.tex
@@ -525,6 +525,9 @@ thus when a strategy plays against a single opponent. In this case the formulati
 of Theorem~\ref{theorem:quadratic_form_u} is used and the best response is captured
 by Lemma~\ref{lemma:memone_best_response}.
 
+% TODO I wonder if moving this long list of specific results to an appendix
+% would help focus the paper. (They could be an entire separate chapter in your
+% thesis).
 \begin{lemma}\label{lemma:memone_best_response}
     The optimal behaviour of a memory one strategy player \(p^* \in \R_{[0, 1]} ^ 4\)
     against a given opponent \(q \in \R_{[0, 1]} ^ 4\) is given by:
